--- a/Script/description
+++ b/Script/description
@@ -1,1 +1,5 @@
-personal script for Bayes course 
+- personal script pdfs for Bayes course 
+- official slides 
+- examples 
+- screenshots from the course website 
+
